Cyberduck
https://cyberduck.io/

7.8.0
- [Feature] Connecting to different libraries (SharePoint) (#11043)
- [Feature] Default connection profile (Microsoft SharePoint Site) to connect so specific site (Sharepoint)  (#10115, #11375)
- [Feature] Create shared link for file (OneDrive, SharePoint) (#11373)

7.7.2
- [Feature] Allow custom session duration for STS (S3) (#11265)
- [Feature] Support for PreferredAuthentications in OpenSSH configuration (SFTP) (#9964)
- [Bugfix] Exception reordering of bookmarks with drag and drop (macOS) (#11242)
- [Bugfix] Crash opening QuickLook panel (macOS) (#11212)
- [Bugfix] Temporary local file deleted after editing in external editor (#11086)
- [Bugfix] Include port number when saving host key fingerprint (SFTP, Windows) (#11255)

7.7.1
- [Bugfix] Workaround for crash on macOS 11 for some users (#11231)
- [Bugfix] Failure connecting through jump server with alias in configuration for target host (#11227)
- [Bugfix] Missing search field on macOS prior version 10.15 (#11234)

7.7.0
- [Feature] Connect via SSH tunnel through bastion host with JumpHost configuration directive (SFTP) (#2865)
- [Feature] Bookmark toggle control and search field moved to toolbar (macOS)
- [Bugfix] Accessing CloudFront and KMS configuration ignores ~/.aws/credentials (#11175)
- [Bugfix] Failure deleting folder placeholder in versioned bucket (S3) (#11157)
- [Bugfix] Server connection timeout when moving or duplicating large files (Backblaze B2) (#11185)
- [Bugfix] Certificate trust prompt regardless of override in keychain (macOS) (#11118)
- [Bugfix] Failure saving credentials (CLI, Windows) (#11098)
- [Bugfix] Unable to connect to cn-north-1 (S3) (#11197)
- [Bugfix] Access shared files (OneDrive Business) (#11102)
- [Bugfix] Read external_id from AssumeRole configuration in ~/.aws/credentials (S3) (#11229)

7.6.2
- [Feature] Allow to set password for shared link of file (Dropbox, Nextcloud, DRACOON)