@@ -46,9 +46,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
-
-
     </style>
 </head>
 
@@ -75,6 +72,9 @@
     <li><span class="label label-success">Feature</span> Create shared link for file (OneDrive, SharePoint) (<a
         target="_blank" href="https://trac.cyberduck.io/ticket/11373">#11373</a>)
     </li>
+    <li><span class="label label-success">Feature</span> Updated toolbar icons in Preferencs window (macOS)</li>
+    <li><span class="label label-warning">Bugfix</span> No attempt to authenticate using SSH agent (SFTP)</li>
+    <li><span class="label label-warning">Bugfix</span> Allow browsing filenames containing forward slash (Google Drive)</li>
 </ul>
 
 <p>
